# lab-work

./: README.md
Lab1_XuniHuang/Lab_Part1/: CMakeCache.txt  DgiLab  Makefile  cmake_install.cmake  skeleton.cpp
Lab1_XuniHuang/Lab_Part2/: CMakeCache.txt  CMakeLists.txt  DgiLab  Makefile  cmake_install.cmake  skeleton.cpp
lab2/: CMakeCache.txt  DgiLab  Makefile  TestModel.h  cmake_install.cmake  skeleton.cpp  test.cpp
lab3/part1/: CMakeCache.txt  DgiLab  Makefile  README.md  SDL2Auxiliary.cpp  cmake_install.cmake  skeleton.cpp
lab3/part2/: CMakeCache.txt  DgiLab  Makefile  cmake_install.cmake  skeleton.cpp
lab3/part3/: CMakeCache.txt  DgiLab  Makefile  cmake_install.cmake  skeleton.cpp
lab3/part4/: CMakeCache.txt  DgiLab  LICENSE  Makefile  SDL2Auxiliary.h  cmake_install.cmake  skeleton.cpp
new_lab2/: CMakeCache.txt  DgiLab  Makefile  cmake_install.cmake  skeleton.cpp  test.cpp
